@@ -281,8 +281,6 @@ $strConfigLeftFrameDBSeparator_desc = __('String that separates databases into d
 $strConfigLeftFrameDBSeparator_name = __('Database tree separator');
 $strConfigLeftFrameDBTree_desc = __('Only light version; display databases in a tree (determined by the separator defined below)');
 $strConfigLeftFrameDBTree_name = __('Display databases in a tree');
-$strConfigLeftFrameLight_desc = __('Disable this if you want to see all databases at once');
-$strConfigLeftFrameLight_name = __('Use light version');
 $strConfigLeftFrameTableLevel_name = __('Maximum table tree depth');
 $strConfigLeftFrameTableSeparator_desc = __('String that separates tables into different tree levels');
 $strConfigLeftFrameTableSeparator_name = __('Table tree separator');
