@@ -50,6 +50,7 @@ VerboseMultiSubmit, ReplaceHelpImg
 + rfe #3522109 [browse] Grid editing: action to trigger it (or disable)
 - bug #3526598 [interface] SQL query not shown when creating table
 + Dropped configuration directive: AllowThirdPartyFraming
++ Dropped configuration directive: LeftFrameLight
 
 3.5.4.0 (not yet released)
 - bug #3570212 [edit] uuid_short() is a no-arguments function
